<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch_Proj_02</string>
    <string name="app_name_on_action_bar">Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_menu_item_title_settings">SettingsImage</string>
    <string name="str_menu_item_title_share">ShareImage</string>
    <string name="hint_enter_query_to_search">Enter query to search</string>
    <string name="btn_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lbl_advanced_search_options">Advanced Search Options</string>
    <string name="lbl_image_size">Image Size</string>
    <string name="lbl_color_filter">Color Filter</string>
    <string name="lbl_image_type">Image Type</string>
    <string name="lbl_site_filter">Site Filter</string>
    <string name="lbl_file_type">File Type</string>
    <string name="hint_enter_site_to_search">Enter site to search</string>
    <string name="prompt_image_size_spinner">Select Image Size</string>
    <string name="prompt_image_color_spinner">Select Image Color</string>
    <string name="prompt_image_type_spinner">Select Image Type</string>
    <string name="prompt_file_type_spinner">Select File Type</string>
    <string name="error_no_query">Enter Query to Search</string>
    <string name="str_item_image_content_descrp">Image Result</string>
    <string name="str_item_title">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="action_settings">Settings</string>
	<string name="str_full_image_content_descrp">Full Image</string>
</resources>
